--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend && npm install"
+    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
   },
   "author": "",
   "license": "ISC",
